<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/home"
            android:title="@string/Inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/Perfil" />
        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@drawable/inmuebles"
            android:title="@string/Inmuebles" />
        <item
            android:id="@+id/nav_InmueblesAlquilados"
            android:icon="@drawable/inquilino"
            android:title="@string/Inquilino" />
        <item
            android:id="@+id/nav_Contrato"
            android:icon="@drawable/contrato"
            android:title="@string/Contrato" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />
    </group>
</menu>