<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.inmobiliarianovara.ui.Inicio.InicioFragment"
        android:label="@string/Inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliarianovara.ui.Perfil.PerfilFragment"
        android:label="@string/Perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmobiliarianovara.ui.Inmuebles.InmueblesFragment"
        android:label="@string/Inmuebles"
        tools:layout="@layout/fragment_inmueble" />

    <fragment
        android:id="@+id/nav_InmueblesAlquilados"
        android:name="com.example.inmobiliarianovara.ui.Inquilino.InmueblesAlquiladosFragment"
        android:label="@string/InmueblesAlquilados"
        tools:layout="@layout/fragment_inmuebles_alquilados" >
        <action
            android:id="@+id/action_nav_inmueblesAlquilados_to_nav_inquilino"
            app:destination="@id/nav_inquilino" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.example.inmobiliarianovara.ui.Inquilino.InquilinoFragment"
        android:label="@string/Inquilino"
        tools:layout="@layout/fragment_inquilino" >
        <action
            android:id="@+id/action_nav_inquilino_to_nav_inmueblesAlquilados"
            app:destination="@id/nav_InmueblesAlquilados" />
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmobiliarianovara.ui.Logout.LogoutFragment"
        android:label="@string/Logout"
        tools:layout="@layout/fragment_logoout" />

    <fragment
        android:id="@+id/inmueblesFragment"
        android:name="com.example.inmobiliarianovara.ui.Inmuebles.InmuebleFragment"
        android:label="inmueble_fragment"
        tools:layout="@layout/inmueble_fragment" />
    <fragment
        android:id="@+id/nav_Contrato"
        android:name="com.example.inmobiliarianovara.ui.Contratos.ContratosFragment"
        android:label="fragment_contratos"
        tools:layout="@layout/fragment_contratos" />

    <fragment
        android:id="@+id/detalleContrato"
        android:name="com.example.inmobiliarianovara.ui.Contratos.ContratoFragment"
        android:label="ContratoFragment"
        tools:layout="@layout/detalle_contrato_fragment" />

</navigation>